# counter-deploy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend-tests.yml  deploy.yml
backend/: app.py
backend/tests/: conftest.py  test_counter.py  test_requirements.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: counter.ts
