[project]
name = "counter-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==2.2.5",
    "flask-cors==3.0.10",
    "gunicorn==20.1.0",
    "python-dotenv==1.0.0",
    "redis==4.6.0",
    "requests==2.31.0",
]
